src/test/ui/const-generics/cannot-infer-type-for-const-param.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/cannot-infer-type-for-const-param.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^

error[E0282]: type annotations needed
  --> $DIR/cannot-infer-type-for-const-param.rs:10:19
   |
LL |     let _ = Foo::<3>([1, 2, 3]);
   |                   ^ cannot infer type for `{integer}`

error[E0308]: mismatched types
  --> $DIR/cannot-infer-type-for-const-param.rs:10:22
   |
LL |     let _ = Foo::<3>([1, 2, 3]);
   |                      ^^^^^^^^^ expected `Const { ty: usize, val: Unevaluated(DefId(0:18 ~ cannot_infer_type_for_const_param[317d]::main[0]::{{constant}}[0]), []) }`, found `Const { ty: usize, val: Scalar(0x0000000000000003) }`
   |
   = note: expected type `[u8; _]`
              found type `[u8; 3]`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0282, E0308.
For more information about an error, try `rustc --explain E0282`.
